--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>宝贝映映 生日快乐</title>
+    <title>送给最心爱的 - 小卿卿</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <style type="text/css">
         @font-face {
@@ -18,74 +18,44 @@
     <div id="mainDiv">
         <div id="content">
             <div id="code">
-                <span class="comments">7月7日，终于等到今天了</span>
+                <span class="comments">小卿卿，等了好久终于等到了你</span>
                 <br />
-                <span class="comments">盼了好久，真的好想陪你过生日</span>
+                <span class="comments">写下这个网站，一方面是想记录我们成长的点滴</span>
                 <br />
-                <span class="comments">不知不觉，9个月了呢</span>
+                <span class="comments">另一方面，也是一个约定</span>
                 <br />
-                <span class="comments">还记得吗</span>
+                <span class="comments">“</span>
                 <br />
-                <span class="comments">以前你总是叫我小孩</span>
+                <span class="comments">好好爱你</span>
                 <br />
-                <span class="comments">可是现在不同了</span>
+                <span class="comments">好好工作</span>
                 <br />
-                <span class="comments">我改掉了脾气</span>
+                <span class="comments">好好经营这份感情</span>
                 <br />
-                <span class="comments">我对感情</span>
+                <span class="comments">让它在未来的某个时间里开花结果</span>
                 <br />
-                <span class="comments">不再冷漠</span>
+                <span class="comments">我愿意陪伴你经历风雨</span>
                 <br />
-                <span class="comments">不再那么理性</span>
+                <span class="comments">一起享受成长的过程</span>
                 <br />
-                <span class="comments">我懂得了怎么去宠爱一个人</span>
+                <span class="comments">”</span>
                 <br />
-                <span class="comments">我不再是小孩了</span>
+                <span class="comments">亲爱的小卿卿：</span>
                 <br />
-                <span class="comments">我很坚定</span>
-                <br />
-                <span class="comments">也很珍惜</span>
-                <br />
-                <span class="comments">一直想给我们以后留下点什么回忆</span>
-                <br />
-                <span class="comments">这次终于动手做了</span>
-                <br />
-                <span class="comments">这个网页会永远运行下去</span>
-                <br />
-                <span class="comments">这只是一个开始</span>
-                <br />
-                <span class="comments">以后我们的点滴，我会一点一点记录在后面</span>
-                <br />
-                <span class="comments">宝贝</span>
-                <br />
-                <span class="comments">这辈子</span>
-                <br />
-                <span class="comments">遇上你</span>
-                <br />
-                <span class="comments">我没有遗憾了</span>
-                <br />
-                <span class="comments">这是我陪你过的第一个生日</span>
-                <br />
-                <span class="comments">以后每年这一天</span>
-                <br />
-                <span class="comments">我都会在</span>
-                <br />
-                <span class="comments">亲爱的：</span>
-                <br />
-                <span class="comments">生日快乐！</span>
+                <span class="comments">我一直都在这里</span>
                 <br />
             </div>
             <div id="loveHeart">
                 <canvas id="garden"></canvas>
                 <div id="words">
                     <div id="messages">
-                        老婆，这已经是我们在一起的第
+                        小卿卿，这已经是我们在一起的第
                         <div id="elapseClock"></div>
                     </div>
                     <div id="loveu">
-                        Happy Birthday!
-                        <br/>Love you forever and ever.
-                        <div class="signature">- Ace</div>
+                        执子之手，
+                        <br/>与子偕老
+                        <div class="signature">- 大卿卿</div>
                     </div>
                 </div>
             </div>
@@ -95,7 +65,7 @@
         var offsetX = $("#loveHeart").width() / 2;
         var offsetY = $("#loveHeart").height() / 2 - 55;
         var together = new Date();
-        together.setFullYear(2011, 9, 7);
+        together.setFullYear(2014, 8, 28);
         together.setHours(0);
         together.setMinutes(0);
         together.setSeconds(0);
